# PureCpp_RayTracing

./: CMakeLists.txt  README.md
include/: camera.h  hittable.h  material.h  rtweekend.h  sphere.h  vec3.h
src/: main.cpp
